--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.security.user.name=admin
-spring.security.user.password=admin
+#spring.security.user.name=admin
+#spring.security.user.password=admin
